[gd_scene load_steps=5 format=3 uid="uid://ltu2yenhcs8"]

[ext_resource type="Script" path="res://Scripts/Game7/options_menu.gd" id="1_cb02e"]
[ext_resource type="FontFile" uid="uid://csl3n5yxlmh1l" path="res://Assets/gunplay rg.otf" id="1_rt1k0"]
[ext_resource type="Texture2D" uid="uid://bv8lhya62pnlb" path="res://Assets/Sprites/Game7/button.png" id="2_7rq8o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h8gip"]
bg_color = Color(0.386757, 0.386757, 0.386757, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
script = ExtResource("1_cb02e")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -125.0
offset_right = 150.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h8gip")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -26.0
offset_right = 55.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_rt1k0")
theme_override_font_sizes/font_size = 36
text = "Music:"

[node name="MusicOn" type="CheckButton" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_rt1k0")
theme_override_font_sizes/font_size = 36
text = "Sounds:"

[node name="SoundsOn" type="CheckButton" parent="Panel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = " "

[node name="TextureButton" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_7rq8o")
texture_pressed = ExtResource("2_7rq8o")
texture_hover = ExtResource("2_7rq8o")

[node name="Label" type="Label" parent="Panel/VBoxContainer/TextureButton"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 0
offset_right = 150.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.211765, 0.211765, 0.211765, 1)
theme_override_fonts/font = ExtResource("1_rt1k0")
theme_override_font_sizes/font_size = 22
text = "OK"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer/MusicOn" to="." method="_on_music_on_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer2/SoundsOn" to="." method="_on_sounds_on_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
